--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,18 @@
                         <artifactId>maven-release-plugin</artifactId>
                         <version>2.5.1</version>
                     </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
                 </plugins>
+
             </build>
             <distributionManagement>
                 <snapshotRepository>
