--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ demo/target/
 .idea/libraries/Maven__org_yaml_snakeyaml_1_26.xml
 .idea/modules.xml
 .idea/vcs.xml
+.idea/dictionaries/Administrator.xml
