--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.onekit.x2x.cloud</groupId>
     <artifactId>baidu-sdk</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <name>BaiduSDK</name>
     <url>https://github.com/onekit-cloud-java/baidusdk</url>
     <description>baidu cloud sdk</description>
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>cn.onekit.x2x.cloud</groupId>
             <artifactId>thekit</artifactId>
-            <version>1.1.3</version>
+            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>cn.onekit.x2x.cloud</groupId>
             <artifactId>baidu</artifactId>
-            <version>1.0.3</version>
+            <version>1.1.2</version>
         </dependency>
     </dependencies>
     <licenses>
@@ -38,6 +38,11 @@
         <developerConnection>scm:git:https://github.com/onekit-cloud-java/toutiaosdk.git</developerConnection>
         <url>git:https://github.com/onekit-cloud-java/toutiaosdk.git</url>
     </scm>
+
+
+    <!--
+mvn clean deploy -P release
+-->
     <developers>
         <developer>
             <name>onekit</name>
